getting close to finishing coding (hopefully)

--- a/submissions/thesis-original/appendices/litreview/feature_selection.tex
+++ b/submissions/thesis-original/appendices/litreview/feature_selection.tex
@@ -6,7 +6,7 @@ We develop a conceptual framework relating startup potential and investor confid
 \begin{figure}[!htbp]
 \centering
 \input{../figures/litreview/framework_details}
-\caption{Proposed conceptual framework for startup investment. This extended version of the framework includes features identified by empirical studies of startup investment. We adapt the framework proposed by Ahlers et al.~\cite{ahlers2015}, originally based on work by Baum and Silverman~\cite{baum2004}.}
+\caption[Conceputal framework for startup investment (detailed)]{Proposed conceptual framework for startup investment. This extended version of the framework includes features identified by empirical studies of startup investment. We adapt the framework proposed by Ahlers et al.~\cite{ahlers2015}, originally based on work by Baum and Silverman~\cite{baum2004}.}
 \label{fig:appendix:features:framework_details}
 \end{figure}
 
