--- a/submissions/thesis-original/references/primary.bib
+++ b/submissions/thesis-original/references/primary.bib
@@ -1,3 +1,10 @@
+@phdthesis{stone2014,
+  title={Computational analytics for venture finance},
+  author={Stone, Thomas Rory},
+  year={2014},
+  school={UCL (University College London)}
+}
+
 @article{ingley2007,
   title={Effective governance for start-up companies: regarding the board as a strategic resource},
   author={Ingley, Coral B and McCaffrey, Kevin},
