--- a/submissions/thesis-original/litreview/appendices.tex
+++ b/submissions/thesis-original/litreview/appendices.tex
@@ -1,3 +1,3 @@
 \subfile{../appendices/litreview/feature_selection}
-\subfile{../appendices/litreview/data_sources}
-\subfile{../appendices/litreview/classification_algorithms}
+%\subfile{../appendices/litreview/data_sources}
+%\subfile{../appendices/litreview/classification_algorithms}
