--- a/submissions/thesis-original/tables/evaluation/example_predictions.tex
+++ b/submissions/thesis-original/tables/evaluation/example_predictions.tex
@@ -1,11 +1,14 @@
-\begin{tabular}{lrrrrrrrrr} \toprule
-& \multicolumn{3}{c}{Company} \\
-Feature                 & Company1  & Company2  & Company3  \\ \midrule
-Feature1                & Count1    & Count2    & Count3    \\
-Feature2                & Count1    & Count2    & Count3    \\
-Feature3                & Count1    & Count2    & Count3    \\ \midrule
-P(Outcome=1 | X)        & Count1    & Count2    & Count3    \\
-Predicted Outcome       & Count1    & Count2    & Count3    \\
-Actual Outcome          & Count1    & Count2    & Count3    \\
-Correct Prediction      & Count1    & Count2    & Count3    \\
+\begin{tabular}{lccccccccc} \toprule
+& \multicolumn{4}{c}{Company} \\
+Feature                 & ChaCha        & Doctor.com    & Fab       & Mixpanel  \\ \midrule
+Age (Years)             & 7.4           & 0.6            & 4.3      & 3.8      \\
+Funding Raised (\$m)    & 92.0          & 0.0           & 171.0     & 12.0      \\
+Funding Rounds (N)      & 8             & 0             & 8         & 4         \\ \midrule
+Feature Stage           & Series D+     & Pre-Seed      & Series C  & Series A  \\
+Outcome Stage           & Series D+     & Series A      & Acquired  & Series B  \\ \midrule
+Predicted Outcome       & \cmark        & \xmark        & \cmark    & \cmark    \\
+Actual Outcome          & \xmark        & \cmark        & \cmark    & \cmark    \\
+Correct Prediction      & \xmark        & \xmark        & \cmark    & \cmark    \\
 \bottomrule \end{tabular}
+
+%2013 - 2017 (4 Years) // Extra Stage
