--- a/submissions/thesis-original/thesis/thesis.tex
+++ b/submissions/thesis-original/thesis/thesis.tex
@@ -153,9 +153,9 @@
 
 Venture Capital (VC) firms face the challenge of choosing a few outstanding investments from a sea of potential opportunities. The VC industry requires better systems and processes to efficiently manage labour-intensive tasks like investment screening. Approaches to address this challenge have had three common limitations: small sample size, a focus on early-stage investment, and incomplete feature sets. There is also little evidence that research has been translated into systems that assist investors. Applying machine learning techniques to new online startup data sources may address previous limitations and make VC investment screening more efficient and effective.
 
-To address the research problem, a multi-stage supervised classification system was developed. The system identifies startup companies that are likely to receive additional funding or have a liquidity event (exit) in a given period of time. A dataset is collected from the CrunchBase and PatentsView data sources. A processing pipeline framework is developed and a randomized search is performed across the pipeline's hyperparameters to generate candidate pipelines, which are tested and ranked. Finally, the best pipeline is used to generate models which are tested with respect to their performance across time, forecast period, and developmental stage.
+To address the research problem, a multi-stage supervised classification system was developed. The system identifies startup companies that are likely to receive additional funding or have a liquidity event (exit) in a given period of time. A dataset is collected from the CrunchBase and PatentsView data sources. A processing pipeline framework is developed and a randomized search is performed across the pipeline's hyperparameters to generate candidate pipelines, which are tested and ranked. Finally, the best pipeline is used to generate models which are tested with respect to their performance across time, forecast period, developmental stage and target outcome.
 
-The proposed system was evaluated against three criteria: efficiency, robustness and predictive power. The system satisfies each of these criteria. It makes predictions with an average F1 score (for the positive class) of 0.32-0.52 over forecast windows of 2-4 years, it is robust, with only minimal variance with respect to historical data, and it is efficient in that it is semi-autonomous and could be made fully autonomous with minimal development. Human capital, specifically the employment experience of advisors, executives and founders, is the greatest predictor of investment success. This project lays the groundwork for a production-ready VC investment screening tool.
+The proposed system was evaluated against three criteria: efficiency, robustness and predictive power. The system satisfies each of these criteria. It makes predictions with an average F1 score (for the positive class) of 0.32-0.52 over forecast windows of 2-4 years, it is robust, with only minimal variance with respect to historical data, and it is efficient in that it is semi-autonomous and could be made fully autonomous with minimal development. Human capital, specifically the prior experience of a startup's advisors, executives and founders, is the greatest predictor of investment success. This project lays the groundwork for a production-ready VC investment screening tool.
 
 \end{abstract}
 
